--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,16 @@
-.App {
-  text-align: center;
+header{
+margin: 0 10%;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  margin: 20px 10%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.menu{
+  width: 30%;
+  margin-right: 10%
 }
-
-.App-link {
-  color: #61dafb;
+.body{
+  width: 60%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.foot{
+  margin: 0 10%;
 }
