--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,14 @@ header{
 margin: 0 10%;
 }
 .container{
-  margin: 20px 10%;
+  margin: 20px 10%; display: flex; flex-direction:row;
 }
 .menu{
   width: 30%;
   margin-right: 10%
 }
 .body{
-  width: 60%;
+  width: 60%; 
 }
 .foot{
   margin: 0 10%;
